--- a/RAG_system_from_scratch.ipynb
+++ b/RAG_system_from_scratch.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/shindeswatiii/RAG-system-from-scratch/blob/main/RAG_system_from_scratch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1064,7 +1074,9 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPo2lDbdzyKX1Mr92hlkwp1",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
